Update Java Memory Management.md